--- a/public/css/app.css
+++ b/public/css/app.css
@@ -357,7 +357,7 @@ h1 {
     border: 1px solid transparent;
     border-radius: 30px;
     transition: all .3s ease-in-out;
-    padding: 20px 0;
+    padding: 20px;
 }
 
 .worker-sm:hover:not(:focus-visible) {
