--- a/public/css/app.css
+++ b/public/css/app.css
@@ -29,6 +29,8 @@ a {
     font-size: 20px;
     color: #ffffff;
     text-decoration: none;
+    background: none;
+    border: none;
 }
 .link::after {
     content: '';
@@ -265,13 +267,22 @@ h1 {
 }
 
 .input_field {
+    width: 100%;
+    padding: 10px;
+    font-size: 20px;
+    background: none;
+    border: 2px solid #ffffff16;
+    border-radius: 10px;
+    color: #fdfbd9;
+}
+
+.input-field__option {
     padding: 10px;
     font-size: 20px;
     color: #232323;
     background: none;
     border: 2px solid #ffffff16;
     border-radius: 10px;
-    color: #fdfbd9;
 }
 
 .button {
@@ -311,6 +322,33 @@ h1 {
 
 .worker-item img {
     width: 20%;
+}
+
+.workers-page {
+    display: grid;
+    grid-template-columns: 20% 1fr;
+    gap: 50px;
+}
+
+.worker__img {
+    max-width: 100%;
+}
+
+.workers-page__text {
+    margin-bottom: 20px;
+}
+
+.container-workers-detail {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
 }
 
 .menu {
